--- a/0.Web_scraping_101.ipynb
+++ b/0.Web_scraping_101.ipynb
@@ -1,8 +1,72 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "149d0a0d",
+   "metadata": {},
+   "source": [
+    "## 0. Requirement"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
+   "id": "8999cd0a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Defaulting to user installation because normal site-packages is not writeable\n",
+      "Requirement already satisfied: beautifulsoup4==4.12.3 in c:\\users\\user\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.12_qbz5n2kfra8p0\\localcache\\local-packages\\python312\\site-packages (from -r requirements.txt (line 1)) (4.12.3)\n",
+      "Requirement already satisfied: numpy==1.26.4 in c:\\users\\user\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.12_qbz5n2kfra8p0\\localcache\\local-packages\\python312\\site-packages (from -r requirements.txt (line 2)) (1.26.4)\n",
+      "Requirement already satisfied: pandas==2.2.2 in c:\\users\\user\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.12_qbz5n2kfra8p0\\localcache\\local-packages\\python312\\site-packages (from -r requirements.txt (line 3)) (2.2.2)\n",
+      "Requirement already satisfied: requests==2.31.0 in c:\\users\\user\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.12_qbz5n2kfra8p0\\localcache\\local-packages\\python312\\site-packages (from -r requirements.txt (line 4)) (2.31.0)\n",
+      "Requirement already satisfied: selenium==4.21.0 in c:\\users\\user\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.12_qbz5n2kfra8p0\\localcache\\local-packages\\python312\\site-packages (from -r requirements.txt (line 5)) (4.21.0)\n",
+      "Requirement already satisfied: tqdm==4.66.4 in c:\\users\\user\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.12_qbz5n2kfra8p0\\localcache\\local-packages\\python312\\site-packages (from -r requirements.txt (line 6)) (4.66.4)\n",
+      "Requirement already satisfied: urllib3==1.26.20 in c:\\users\\user\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.12_qbz5n2kfra8p0\\localcache\\local-packages\\python312\\site-packages (from -r requirements.txt (line 7)) (1.26.20)\n",
+      "Requirement already satisfied: soupsieve>1.2 in c:\\users\\user\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.12_qbz5n2kfra8p0\\localcache\\local-packages\\python312\\site-packages (from beautifulsoup4==4.12.3->-r requirements.txt (line 1)) (2.5)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.2 in c:\\users\\user\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.12_qbz5n2kfra8p0\\localcache\\local-packages\\python312\\site-packages (from pandas==2.2.2->-r requirements.txt (line 3)) (2.9.0.post0)\n",
+      "Requirement already satisfied: pytz>=2020.1 in c:\\users\\user\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.12_qbz5n2kfra8p0\\localcache\\local-packages\\python312\\site-packages (from pandas==2.2.2->-r requirements.txt (line 3)) (2024.1)\n",
+      "Requirement already satisfied: tzdata>=2022.7 in c:\\users\\user\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.12_qbz5n2kfra8p0\\localcache\\local-packages\\python312\\site-packages (from pandas==2.2.2->-r requirements.txt (line 3)) (2024.1)\n",
+      "Requirement already satisfied: charset-normalizer<4,>=2 in c:\\users\\user\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.12_qbz5n2kfra8p0\\localcache\\local-packages\\python312\\site-packages (from requests==2.31.0->-r requirements.txt (line 4)) (3.3.2)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\user\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.12_qbz5n2kfra8p0\\localcache\\local-packages\\python312\\site-packages (from requests==2.31.0->-r requirements.txt (line 4)) (3.6)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\user\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.12_qbz5n2kfra8p0\\localcache\\local-packages\\python312\\site-packages (from requests==2.31.0->-r requirements.txt (line 4)) (2024.2.2)\n",
+      "Requirement already satisfied: trio~=0.17 in c:\\users\\user\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.12_qbz5n2kfra8p0\\localcache\\local-packages\\python312\\site-packages (from selenium==4.21.0->-r requirements.txt (line 5)) (0.25.1)\n",
+      "Requirement already satisfied: trio-websocket~=0.9 in c:\\users\\user\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.12_qbz5n2kfra8p0\\localcache\\local-packages\\python312\\site-packages (from selenium==4.21.0->-r requirements.txt (line 5)) (0.11.1)\n",
+      "Requirement already satisfied: typing_extensions>=4.9.0 in c:\\users\\user\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.12_qbz5n2kfra8p0\\localcache\\local-packages\\python312\\site-packages (from selenium==4.21.0->-r requirements.txt (line 5)) (4.12.2)\n",
+      "Requirement already satisfied: colorama in c:\\users\\user\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.12_qbz5n2kfra8p0\\localcache\\local-packages\\python312\\site-packages (from tqdm==4.66.4->-r requirements.txt (line 6)) (0.4.6)\n",
+      "Requirement already satisfied: six>=1.5 in c:\\users\\user\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.12_qbz5n2kfra8p0\\localcache\\local-packages\\python312\\site-packages (from python-dateutil>=2.8.2->pandas==2.2.2->-r requirements.txt (line 3)) (1.16.0)\n",
+      "Requirement already satisfied: attrs>=23.2.0 in c:\\users\\user\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.12_qbz5n2kfra8p0\\localcache\\local-packages\\python312\\site-packages (from trio~=0.17->selenium==4.21.0->-r requirements.txt (line 5)) (23.2.0)\n",
+      "Requirement already satisfied: sortedcontainers in c:\\users\\user\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.12_qbz5n2kfra8p0\\localcache\\local-packages\\python312\\site-packages (from trio~=0.17->selenium==4.21.0->-r requirements.txt (line 5)) (2.4.0)\n",
+      "Requirement already satisfied: outcome in c:\\users\\user\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.12_qbz5n2kfra8p0\\localcache\\local-packages\\python312\\site-packages (from trio~=0.17->selenium==4.21.0->-r requirements.txt (line 5)) (1.3.0.post0)\n",
+      "Requirement already satisfied: sniffio>=1.3.0 in c:\\users\\user\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.12_qbz5n2kfra8p0\\localcache\\local-packages\\python312\\site-packages (from trio~=0.17->selenium==4.21.0->-r requirements.txt (line 5)) (1.3.1)\n",
+      "Requirement already satisfied: cffi>=1.14 in c:\\users\\user\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.12_qbz5n2kfra8p0\\localcache\\local-packages\\python312\\site-packages (from trio~=0.17->selenium==4.21.0->-r requirements.txt (line 5)) (1.16.0)\n",
+      "Requirement already satisfied: wsproto>=0.14 in c:\\users\\user\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.12_qbz5n2kfra8p0\\localcache\\local-packages\\python312\\site-packages (from trio-websocket~=0.9->selenium==4.21.0->-r requirements.txt (line 5)) (1.2.0)\n",
+      "Requirement already satisfied: PySocks!=1.5.7,<2.0,>=1.5.6 in c:\\users\\user\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.12_qbz5n2kfra8p0\\localcache\\local-packages\\python312\\site-packages (from urllib3[socks]<3,>=1.26->selenium==4.21.0->-r requirements.txt (line 5)) (1.7.1)\n",
+      "Requirement already satisfied: pycparser in c:\\users\\user\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.12_qbz5n2kfra8p0\\localcache\\local-packages\\python312\\site-packages (from cffi>=1.14->trio~=0.17->selenium==4.21.0->-r requirements.txt (line 5)) (2.21)\n",
+      "Requirement already satisfied: h11<1,>=0.9.0 in c:\\users\\user\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.12_qbz5n2kfra8p0\\localcache\\local-packages\\python312\\site-packages (from wsproto>=0.14->trio-websocket~=0.9->selenium==4.21.0->-r requirements.txt (line 5)) (0.14.0)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[notice] A new release of pip is available: 25.0.1 -> 25.1.1\n",
+      "[notice] To update, run: C:\\Users\\user\\AppData\\Local\\Microsoft\\WindowsApps\\PythonSoftwareFoundation.Python.3.12_qbz5n2kfra8p0\\python.exe -m pip install --upgrade pip\n"
+     ]
+    }
+   ],
+   "source": [
+    "## jalankan ini dahulu sebelum running\n",
+    "!pip install -r requirements.txt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "3acacfbb",
    "metadata": {},
    "outputs": [],
@@ -10,7 +74,8 @@
     "import requests\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from bs4 import BeautifulSoup"
+    "from bs4 import BeautifulSoup\n",
+    "from urllib.parse import quote #pasring space menjadi modulo 20 (%20)"
    ]
   },
   {
@@ -24,11 +89,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "dcb59878",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "200\n"
+     ]
+    }
+   ],
+   "source": [
+    "## check if there is a response, if it's 200, we are good to go\n",
+    "s = requests.Session()\n",
+    "url = 'https://www.detik.com'\n",
+    "response = s.get(url)\n",
+    "print(response.status_code)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "63ac4624",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def scrape_detik_byquery(keyword, halaman) -> pd.DataFrame:\n",
+    "    "
+   ]
   },
   {
    "cell_type": "code",
@@ -36,7 +126,45 @@
    "id": "0455a7a5",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def scrape_detik_satu(url):\n",
+    "    response = requests.get(url)\n",
+    "    soup = BeautifulSoup(response.content, 'html.parser')\n",
+    "\n",
+    "    # Ambil teks tanggal mentah\n",
+    "    tanggal_utuh = soup.find('div', class_='detail__date')\n",
+    "    if tanggal_utuh:\n",
+    "        waktu = tanggal_utuh.get_text(strip=True)\n",
+    "\n",
+    "        try:\n",
+    "            # Pisahkan jadi hari, tanggal, dan jam\n",
+    "            hari, sisanya = waktu.split(',', 1)\n",
+    "            sisanya = sisanya.strip()\n",
+    "            parts = sisanya.rsplit(' ', 2)\n",
+    "            tanggal_bersih = parts[0]\n",
+    "            jam = f\"{parts[1]} {parts[2]}\"\n",
+    "        except Exception:\n",
+    "            hari = np.nan\n",
+    "            tanggal_bersih = np.nan\n",
+    "            jam = np.nan\n",
+    "    else:\n",
+    "        hari = np.nan\n",
+    "        tanggal_bersih = np.nan\n",
+    "        jam = np.nan\n",
+    "\n",
+    "    hasil = {\n",
+    "        \"judul\": soup.find('h1').get_text(strip=True) if soup.find('h1') else np.nan,\n",
+    "        \"isi\": \"\\n\\n\".join(p.get_text(strip=True) for p in soup.find_all('p')),\n",
+    "        \"hari\": hari,\n",
+    "        \"tanggal\": tanggal_bersih,\n",
+    "        \"jam\": jam,\n",
+    "        \"kategori\": soup.find('div', class_=\"page__breadcrumb\").get_text(strip=True) if soup.find('div', class_=\"page__breadcrumb\") else np.nan,\n",
+    "        \"link\": url\n",
+    "         \n",
+    "    }\n",
+    "\n",
+    "    return hasil"
+   ]
   },
   {
    "cell_type": "code",
@@ -761,7 +889,7 @@
     "\n",
     "    Args:\n",
     "        master_sitemap_url (str): URL sitemap utama.\n",
-    "        max_sitemap (int, optional): Batasi jumlah sitemap anak yang di-scrape. None artinya semua.\n",
+    "        max_sitemap (int, optional): Batasi jumlah sitemap yang di-scrape. None artinya semua.\n",
     "        max_articles (int, optional): Batasi jumlah artikel per sitemap. None artinya semua.\n",
     "        output_csv (str): Nama file output CSV.\n",
     "\n",
@@ -1072,12 +1200,56 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c00bfc0e",
+   "metadata": {},
+   "source": [
+    "### dengan query\n",
+    "```https://www.detik.com/search/searchall?query=makan%20bergizi%20gratis&page=5&result_type=relevansi``` -> pakai modulo 20\n",
+    "\n",
+    "```https://www.detik.com/search/searchall?query={kata_kunci}&page={halaman}&result_type=relevansi```"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "ac161730",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Encoded with quote(): This%20is%20a%20string%20with%20spaces\n",
+      "Encoded with quote_plus(): This+is+a+string+with+spaces\n",
+      "Decoded text: This is a string with spaces\n"
+     ]
+    }
+   ],
+   "source": [
+    "from urllib.parse import quote, unquote, quote_plus\n",
+    "\n",
+    "text = \"This is a string with spaces\"\n",
+    "\n",
+    "encoded_text = quote(text)\n",
+    "print(f\"Encoded with quote(): {encoded_text}\")\n",
+    "\n",
+    "encoded_text_plus = quote_plus(text)\n",
+    "print(f\"Encoded with quote_plus(): {encoded_text_plus}\")\n",
+    "\n",
+    "decoded_text = unquote(encoded_text)\n",
+    "print(f\"Decoded text: {decoded_text}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7e1fc284",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def "
+   ]
   }
  ],
  "metadata": {
