update keyword and csv

--- a/1.Scraping_online_news.ipynb
+++ b/1.Scraping_online_news.ipynb
@@ -162,6 +162,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7361e190",
+   "metadata": {},
+   "source": [
+    "\"Dedi Mulyadi kirim siswa nakal\"\n",
+    "\n",
+    "\"barak militer siswa Jawa Barat\"\n",
+    "\n",
+    "\"pelatihan militer siswa nakal\"\n",
+    "\n",
+    "\"pendidikan karakter Dedi Mulyadi\"\n",
+    "\n",
+    "\"kontroversi siswa ke militer\"\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "420c459a",
@@ -172,9 +188,11 @@
     "\n",
     "# Daftar keyword yang ingin di-scrape\n",
     "list_keyword = [\n",
-    "    \"KDM barak militer\",\n",
-    "    \"Dedi Mulyadi barak militer\",\n",
-    "    \"siswa nakal barak\"\n",
+    "    \"Dedi Mulyadi kirim siswa nakal\",\n",
+    "    \"barak militer siswa Jawa Barat\",\n",
+    "    \"pelatihan militer siswa nakal\",\n",
+    "    \"pendidikan karakter Dedi Mulyadi\",\n",
+    "    \"kontroversi siswa ke militer\"\n",
     "]\n",
     "\n",
     "# Set jumlah halaman yang ingin di-scrape per keyword\n",
@@ -247,6 +265,76 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "9544e247",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_read.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b07a419c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['keyword'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7f63daf7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response = requests.get(\"https://sport.detik.com/sepakbola/liga-indonesia/d-7932517/kdm-soal-bobotoh-rusak-rumput-gbla-pidana-atau-barak-militer\", headers=headers, timeout=60)\n",
+    "soup = BeautifulSoup(response.content, 'html.parser')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4f41345d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "body_div = soup.find('div', class_='detail__body-text itp_bodycontent')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e90584c1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_paragraphs = body_div.find_all('p') if body_div else np.nan"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dac345b7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 2. Temukan semua <p class=\"para_caption\"> dalam div.parallaxindetail.scrollpage\n",
+    "excluded_paragraphs = set()\n",
+    "for para_section in body_div.find_all('div', class_='parallaxindetail scrollpage'):\n",
+    "    for p in para_section.find_all('p', class_='para_caption'):\n",
+    "        excluded_paragraphs.add(p)\n",
+    "\n",
+    "# 3. Filter: ambil semua <p> dari body_div yang tidak ada dalam excluded_paragraphs\n",
+    "final_paragraphs = [p for p in all_paragraphs if p not in excluded_paragraphs]\n",
+    "combined_text = '\\n'.join(p.get_text(strip=True) for p in final_paragraphs)\n",
+    "combined_text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "16075b44",
    "metadata": {},
    "outputs": [],
@@ -286,10 +374,31 @@
     "        if a_tag:\n",
     "            sub_kategori = a_tag.get('dtr-ttl')\n",
     "\n",
+    "    #Ambil Isi\n",
+    "    # 1. Ambil semua <p> dalam div.detail__body-text.itp_bodycontent\n",
+    "    body_div = soup.find('div', class_='detail__body-text itp_bodycontent')\n",
+    "    if body_div is None:\n",
+    "        # Kalau tidak ketemu, langsung ambil semua <p> di halaman\n",
+    "        final_paragraphs = soup.find_all('p')\n",
+    "    else:\n",
+    "        # Ambil semua <p> dalam div\n",
+    "        all_paragraphs = body_div.find_all('p')\n",
     "\n",
+    "        # Temukan semua <p class=\"para_caption\"> dalam div.parallaxindetail.scrollpage\n",
+    "        excluded_paragraphs = set()\n",
+    "        for para_section in body_div.find_all('div', class_='parallaxindetail scrollpage'):\n",
+    "            for p in para_section.find_all('p', class_='para_caption'):\n",
+    "                excluded_paragraphs.add(p)\n",
+    "\n",
+    "        # Filter: ambil semua <p> dari body_div yang tidak ada dalam excluded_paragraphs\n",
+    "        final_paragraphs = [p for p in all_paragraphs if p not in excluded_paragraphs]\n",
+    "\n",
+    "    # Gabungkan hasil\n",
+    "    final_isi = '\\n\\n'.join(p.get_text(strip=True) for p in final_paragraphs)\n",
+    "    \n",
     "    hasil = {\n",
     "        \"judul\": soup.find('h1').get_text(strip=True) if soup.find('h1') else np.nan,\n",
-    "        \"isi\": \"\\n\\n\".join(p.get_text(strip=True) for p in soup.find_all('p')),\n",
+    "        \"isi\": final_isi,\n",
     "        \"hari\": hari,\n",
     "        \"tanggal\": tanggal_bersih,\n",
     "        \"jam\": jam,\n",
@@ -369,12 +478,42 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "535349bc",
+   "id": "272c5edd",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = scrape_detik_dari_csv(\"./files/detik_links.csv\")\n",
-    "df.head()"
+    "df = scrape_detik_dari_csv('./files/detik_links.csv')\n",
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "be3f4381",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "df9aa2ff",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_clean = df.dropna()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0f488cb7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_clean.to_csv('./files/detik_semua_artikel_query_clean.csv', index=False, encoding='utf-8-sig')"
    ]
   },
   {
