some minor update

--- a/1.Scraping_online_news.ipynb
+++ b/1.Scraping_online_news.ipynb
@@ -285,56 +285,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7f63daf7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "response = requests.get(\"https://sport.detik.com/sepakbola/liga-indonesia/d-7932517/kdm-soal-bobotoh-rusak-rumput-gbla-pidana-atau-barak-militer\", headers=headers, timeout=60)\n",
-    "soup = BeautifulSoup(response.content, 'html.parser')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4f41345d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "body_div = soup.find('div', class_='detail__body-text itp_bodycontent')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e90584c1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "all_paragraphs = body_div.find_all('p') if body_div else np.nan"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dac345b7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 2. Temukan semua <p class=\"para_caption\"> dalam div.parallaxindetail.scrollpage\n",
-    "excluded_paragraphs = set()\n",
-    "for para_section in body_div.find_all('div', class_='parallaxindetail scrollpage'):\n",
-    "    for p in para_section.find_all('p', class_='para_caption'):\n",
-    "        excluded_paragraphs.add(p)\n",
-    "\n",
-    "# 3. Filter: ambil semua <p> dari body_div yang tidak ada dalam excluded_paragraphs\n",
-    "final_paragraphs = [p for p in all_paragraphs if p not in excluded_paragraphs]\n",
-    "combined_text = '\\n'.join(p.get_text(strip=True) for p in final_paragraphs)\n",
-    "combined_text"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "16075b44",
    "metadata": {},
    "outputs": [],
@@ -392,9 +342,8 @@
     "\n",
     "        # Filter: ambil semua <p> dari body_div yang tidak ada dalam excluded_paragraphs\n",
     "        final_paragraphs = [p for p in all_paragraphs if p not in excluded_paragraphs]\n",
-    "\n",
-    "    # Gabungkan hasil\n",
-    "    final_isi = '\\n\\n'.join(p.get_text(strip=True) for p in final_paragraphs)\n",
+    "        # Gabungkan hasil\n",
+    "        final_isi = '\\n\\n'.join(p.get_text(strip=True) for p in final_paragraphs)\n",
     "    \n",
     "    hasil = {\n",
     "        \"judul\": soup.find('h1').get_text(strip=True) if soup.find('h1') else np.nan,\n",
@@ -513,7 +462,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_clean.to_csv('./files/detik_semua_artikel_query_clean.csv', index=False, encoding='utf-8-sig')"
+    "df_clean.to_csv('./files/detik_semua_artikel_query_clean.csv', index=False, encoding='utf-8-sig')\n",
+    "df_clean.info()"
    ]
   },
   {
